# manim-tikz

./: .gitignore  README.md  example.py  pyproject.toml
src/manim_tikz/: __init__.py  template.py  tikz.py
tests/: test_manim_tikz.py
