[tool.poetry]
name = "manim-tikz"
version = "0.0.1a1"
description = "Converts Tikz markup code into an SVGMobject for use in manim."
authors = ["Ralphie Raccoon <damian.crosby@manchester.ac.uk>"]
homepage = "https://github.com/ralphieraccoon/manim-tikz"
repository = "https://github.com/ralphieraccoon/manim-tikz"
readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ralphieraccoon/manim-tikz/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
manim = ">=0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."manim.plugins"]
"manim_tikz" = "module:object.attr"